--- a/src/lang/eng.json
+++ b/src/lang/eng.json
@@ -11,8 +11,18 @@
     "registered-success": "{COMMAND} has been registered successfully!"
   },
 
+  "config": {
+    "invalid-type": "Sorry, the configuration type {FILE_TYPE} is not taken into account by our software!"
+  },
+
+  "shutdown": "Shutdown of the server",
+  "can-start": {
+    "development-build": "Sorry, your server failed to start because you are using a development version of EasyProxy, you have set the configuration to prohibit development versions!"
+  },
+
   "plugin": {
     "load": "Plugin {PLUGIN} has been loaded successfully!",
+    "unload": "Plugin {PLUGIN} has been unloaded successfully!",
     "invalid-api": "Plugin {PLUGIN} does not have the right API!"
   }
 }
